[gd_scene load_steps=6 format=3 uid="uid://cbvh2p5o1k45y"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dgc0snlkgjhsw" path="res://ImagesOther/TableTextureOrange.png" id="2"]
[ext_resource type="FontFile" path="res://Fonts/Cardo Font/CardoFont60.tres" id="3"]
[ext_resource type="FontFile" path="res://Fonts/Cardo Font/CardoFont30.tres" id="4"]
[ext_resource type="FontFile" path="res://Fonts/Cardo Font/CardoFont45.tres" id="5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1

[node name="Title" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.5
offset_top = -448.436
offset_right = 195.5
offset_bottom = -353.436
theme_override_fonts/font = ExtResource("3")
text = "Card Games Demo"

[node name="Basic5CardDrawButton" type="Button" parent="Title"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = 97.5
offset_right = 190.0
offset_bottom = 173.5
theme_override_fonts/font = ExtResource("5")
text = "Basic 5 Card Draw"

[node name="5CardDrawButton" type="Button" parent="Title"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = 150.0
offset_right = 190.0
offset_bottom = 226.0
theme_override_fonts/font = ExtResource("5")
text = "5 Card Draw"

[node name="HoldEmButton" type="Button" parent="Title"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = 250.0
offset_right = 190.0
offset_bottom = 326.0
theme_override_fonts/font = ExtResource("5")
text = "Hold 'Em"

[node name="Disclaimer" type="Label" parent="Title"]
layout_mode = 0
offset_left = -697.0
offset_top = 844.0
offset_right = 1094.0
offset_bottom = 973.0
theme_override_fonts/font = ExtResource("4")
text = "Disclaimer. This project is for fun, not a serious card game platform. This was created to simulate card games, 1) for fun, and 2) as mini games within other games. I am sure there are better (or \"proper\" for betting/poker) ways of doing things.
I hope you enjoy."

[connection signal="pressed" from="Title/Basic5CardDrawButton" to="." method="_on_Basic5CardDrawButton_pressed"]
[connection signal="pressed" from="Title/5CardDrawButton" to="." method="_on_5CardDrawButton_pressed"]
[connection signal="pressed" from="Title/HoldEmButton" to="." method="_on_HoldEmButton_pressed"]
